<resources>
    <string name="app_name">Acme</string>
    <string name="welcome">Welcome!</string>
    <string name="logo_alt">Logo - The ACME Electronic Supermarket</string>
    <string name="semi_circle_alt">Semi-circle decoration</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="checkout">Checkout</string>
    <string name="register">Register</string>
    <string name="register_button_alt">Submit Registration</string>
    <string name="login_button_alt">Log in</string>
    <string name="logout_button_alt">Log out</string>
    <string name="checkout_button_alt">Checkout</string>
    <string name="name_label">Name:</string>
    <string name="nickname_label">Nickname:</string>
    <string name="password_label">Password:</string>
    <string name="payment_method_label">Credit Card number:</string>
    <string name="name_label_hint">Insert your name</string>
    <string name="nickname_label_hint">Insert your nickname</string>
    <string name="password_label_hint">Insert your password</string>
    <string name="payment_method_label_hint"> Insert your credit card number </string>
    <string name="back">Back</string>
    <string name="register_instructions">Insert your information to be able to use the app.</string>
    <string name="login_instructions">Insert your information to log in.</string>
    <string name="profile">Profile</string>
    <string name="name_placeholder">John Doe</string>
    <string name="nickname_placeholder">johndoe21</string>
    <string name="change_password">Change Password</string>
    <string name="change_payment">Change Payment Method</string>
    <string name="profile_others">Others:</string>
    <string name="profile_accumulated_discount">Accumulated Discount:</string>
    <string name="profile_accumulated_discount_placeholder">000,00</string>
    <string name="profile_total_amount_spent">Total Amount Spent:</string>
    <string name="profile_total_amount_spent_placeholder">000,00</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="shopping_cart_total_placeholder">Total: 78,34€</string>
    <string name="vouchers">Vouchers</string>
    <string name="vouchers_amount_until_next_voucher">Amount until next voucher:</string>
    <string name="vouchers_amount_until_next_voucher_placeholder">999,99€</string>
    <string name="receipts">Receipts</string>
    <string name="receipts_description">Receipts</string>
    <string name="vouchers_description">Vouchers</string>
    <string name="voucher_date_placeholder">Date: xx-xx-xxxx</string>
    <string name="voucher_code_placeholder">Code: xxxx-xxxx-xxxx</string>
    <string name="voucher_percentage_placeholder">15% off</string>
    <string name="voucher_date_format">Date: %1$s</string>
    <string name="voucher_code_format">Code: %1$s</string>
    <string name="money_format">%1$s€</string>
    <string name="voucher_percentage_format">15% off</string>
    <string name="qrcode_scan">Scan QR code</string>
    <string name="qrcode">QR code</string>
    <string name="locket">Locket</string>
    <string name="valid_coupon">Valid Coupon</string>
    <string name="chose_voucher">Chose voucher</string>
    <string name="no_receipts_warning">You don\'t have any receipts</string>
    <string name="date">Date:</string>
    <string name="total">Total:</string>
    <string name="voucher">Voucher:</string>
    <string name="product">Product</string>
    <string name="products">Products:</string>
    <string name="price">Price</string>
    <string name="amount">Amount</string>
    <string name="placeholder">placeholder</string>
    <string name="euro">€</string>
    <string name="none">None</string>
    <string name ="expandButton">Expand receipt info</string>
    <string name ="readLabel">Read label</string>
    <string name="addToCart">Add to shopping cart</string>
    <string name="forget">Forget</string>
    <string name="remove_product">Remove product from cart</string>
    <string name="remove_one">Remove one from cart</string>
    <string name="close_window">Close Pop-Up</string>
    <string name="warning">Warning</string>
    <string name="proceed">Proceed</string>
    <string name="current_password">Current Password</string>
    <string name="current_passwordInsert">Insert current password</string>
    <string name="new_password">New Password</string>
    <string name="new_passwordInsert">Insert new password</string>
    <string name="change_password_text">Fill the fields bellow to change your password.</string>
    <string name="new_card_number">New Card Number</string>
    <string name="new_card_number_insert">Insert new card number</string>
    <string name="change_card_text">Write your new card number bellow to change it.</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_purchase">Confirm Purchase</string>
    <string name="checkout_options">Checkout Options</string>
    <string name="voucher_select">Voucher:</string>
    <string name="clear">Clear</string>
    <string name="waiting_payment">Waiting for payment confirmation…</string>
    <string name="cancel_purchase">Cancel Purchase</string>
    <string name="apply_acc">Discount Accumulated Value</string>
    <string name="warning_delete_cart">You\'re about to remove %1$d of the item %2$s from your shopping cart, do you wish to proceed?</string>
    <string name="noScan">Scan a product\'s QR code to add it to your cart</string>

</resources>