<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#AFD0F7">

            <ImageButton
                android:id="@+id/profileBackButton"
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back"
                app:srcCompat="@drawable/back_arrow" />

            <ImageView
                android:id="@+id/profileLogoImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:contentDescription="@string/logo_alt"
                android:padding="10sp"
                app:srcCompat="@drawable/logo" />

        </FrameLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:layout_marginBottom="60sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".activities.RegisterActivity">

            <TextView
                android:id="@+id/profileActivityTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/imprima_regular"
                android:text="@string/profile"
                android:textAlignment="center"
                android:textColor="#344870"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/profileNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/imprima_regular"
                android:paddingHorizontal="30sp"
                android:text="@string/name_placeholder"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="70sp" />

            <TextView
                android:id="@+id/profileNicknameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:fontFamily="@font/imprima_regular"
                android:paddingHorizontal="30sp"
                android:text="@string/nickname_placeholder"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="45sp" />

            <Button
                android:id="@+id/profileChangePasswordButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:backgroundTint="@color/babyblue"
                android:text="@string/change_password"
                android:textAllCaps="false"
                android:textSize="25sp" />

            <Button
                android:id="@+id/profileChangePaymentButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:backgroundTint="@color/babyblue"
                android:text="@string/change_payment"
                android:textAllCaps="false"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/profileOthers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0sp"
                android:layout_marginBottom="0sp"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                android:text="@string/profile_others"
                android:textColor="#000"
                android:textSize="45sp" />

            <ProgressBar
                android:id="@+id/progressBarProfile"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:visibility="gone" />

            <LinearLayout
                android:id="@+id/others"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/profileAccumulatedDiscountTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5sp"
                    android:paddingLeft="40sp"
                    android:paddingRight="40sp"
                    android:text="@string/profile_accumulated_discount"
                    android:textColor="#000"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/profileAccumulatedDiscount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50sp"
                    android:text="@string/profile_accumulated_discount_placeholder"
                    android:textColor="#000"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/profileTotalAmountSpentTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5sp"
                    android:paddingLeft="40sp"
                    android:paddingRight="40sp"
                    android:text="@string/profile_total_amount_spent"
                    android:textColor="#000"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/profileTotalAmountSpent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50sp"
                    android:text="@string/profile_total_amount_spent_placeholder"
                    android:textColor="#000"
                    android:textSize="22sp" />

            </LinearLayout>

            <Button
                android:id="@+id/profileLogoutButton"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:backgroundTint="#558FFF"
                android:contentDescription="@string/logout_button_alt"
                android:enabled="true"
                android:fontFamily="@font/imprima_regular"
                android:gravity="center"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textSize="26sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/sky_blue"
        app:itemIconTint="#ffffff"
        app:itemTextColor="#ffffff"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_nav_menu" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>