<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="0sp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0sp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="400sp"
            android:gravity="top">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="430sp"
                android:layout_height="500sp"
                android:layout_marginTop="-100sp"
                android:contentDescription="@string/semi_circle_alt"
                app:srcCompat="@drawable/group_18" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:contentDescription="@string/logo_alt"
                app:srcCompat="@drawable/logo" />
        </FrameLayout>

        <TextView
            android:id="@+id/homeWelcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:fontFamily="@font/imprima_regular"
            android:text="@string/welcome"
            android:textColor="#344870"
            android:textSize="70sp" />

        <Button
            android:id="@+id/homeLoginButton"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/imprima_regular"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="30sp"
            app:backgroundTint="#558FFF" />

        <Button
            android:id="@+id/homeRegisterButton"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/imprima_regular"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="30sp"
            app:backgroundTint="#558FFF" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>