<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="#E0EDFD"
    android:gravity="center"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@color/sky_blue">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_margin="4sp"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/closePopUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:background="@android:color/transparent"
            android:contentDescription="@string/close_window"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/cross_icon" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/contentView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/change_password_text"
            android:textAlignment="center"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/changeCarrdTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/imprima_regular"
                android:text="@string/current_password"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/currentPasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:background="@color/white"
                android:enabled="true"
                android:fontFamily="@font/imprima_regular"
                android:hint="@string/current_passwordInsert"
                android:inputType="textPassword"
                android:labelFor="@id/currentPasswordTitle"
                android:minHeight="50sp"
                android:padding="10dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/oldPasswordError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textColor="@android:color/holo_red_light"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/changePasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:background="@color/white"
                android:enabled="true"
                android:fontFamily="@font/imprima_regular"
                android:hint="@string/new_passwordInsert"
                android:inputType="textPassword"
                android:labelFor="@id/currentPasswordTitle"
                android:minHeight="50sp"
                android:padding="10dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/newPasswordError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textColor="@android:color/holo_red_light"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar4"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Button
            android:id="@+id/yesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/sky_blue"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>

</LinearLayout>