<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:id="@+id/checkoutView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#AFD0F7">

            <ImageButton
                android:id="@+id/checkOuttBackButton"
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back"
                app:srcCompat="@drawable/back_arrow" />

            <ImageView
                android:id="@+id/checkOutLogoImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:contentDescription="@string/logo_alt"
                android:padding="10sp"
                app:srcCompat="@drawable/logo" />

        </FrameLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        android:layout_marginBottom="60sp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".activities.ShoppingCart">

            <TextView
                android:id="@+id/checkOutTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/imprima_regular"
                android:text="@string/checkout"
                android:textAlignment="center"
                android:textColor="#344870"
                android:textSize="50sp" />

            <ImageView
                android:id="@+id/qrCodePos"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/qrcode"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/waiting_payment"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/cancelPurchase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/sky_blue"
                android:fontFamily="@font/imprima_regular"
                android:maxWidth="320dp"
                android:text="@string/cancel_purchase"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/sky_blue"
        app:itemIconTint="#ffffff"
        app:itemTextColor="#ffffff"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_nav_menu" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>